--- a/mysite.html
+++ b/mysite.html
@@ -10,15 +10,14 @@
 <body>
 	<header>
 		<div class="container clearfix">
-			<div id="nav-drawer">
-      <input id="nav-input" type="checkbox" class="nav-unshown">
-      <label id="nav-open" for="nav-input"><span></span></label>
-      <label class="nav-unshown" id="nav-close" for="nav-input"></label>
-      <div id="nav-content">
-      	<li class="nav-list-item">Portfolio</li>
+			<img src="img/logo.png" class="img1">
+			<div class="menu-box">
+				<span class="list-bar"></span>
+				<span class="list-bar"></span>
+				<span class="list-bar"></span>
+			</div>
       </div>
   </div>
-		<img src="img/logo.png" class="img1">
 		<nav>
 			<ul class="nav-list">
 				<li class="nav-list-item">Portfolio</li>
@@ -30,12 +29,14 @@
 	</div>
 	</header>
 	<div class="main-visual">
+		<div class="container3">
 		<div class="title">
 			<p>Lorem lpsum</p>
 	    </div>
 	    <div class="textm">
 	    	<p>simply dummy text of the printing</p>
 	    </div>
+	</div>
 	</div>
 	<div class="color">
 	<div class="portfolio">
@@ -59,6 +60,7 @@
 	</div>
 </div>
 <div class="feature">
+	<div class="container3">
 	<h3 class="title3">Feature</h3>
 	<div class="border"></div>
 	<div class="text3">
@@ -94,6 +96,7 @@
 			Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
 		</p>
 	</div>
+</div>
 </div>
 	</div>
 	<div class="color">
@@ -135,6 +138,7 @@
 		</div>
 	</div>
 				<div class="contact">
+					<div class="container3">
 					<div class="title4">
 						<h3>Contact</h3>
 					</div>
@@ -166,12 +170,13 @@
 							<h4>SNS</h4>
 						</div>
 						<div class="icon clearfix">
-							<i class="fab fa-facebook-f"></i>
-							<i class="fab fa-twitter"></i>
+							<i class="fab fa-facebook-f one"></i>
+							<i class="fab fa-twitter two"></i>
 							<i class="fab fa-instagram"></i>
 						</div>
 					</div>
 				</div>
+			</div>
 			</div>
 				<footer>
 					<div class="last">
